# otusCourseAlloc

./: CMakeLists.txt  lib.cpp  lib.h  main.cpp
.github/workflows/: test.yml
